--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chec/commerce.js": "^2.8.0",
     "@supabase/supabase-js": "^2.36.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.16.0",
-    "styled-components": "^6.0.8"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "install": "^0.13.0",
+    "npm": "^10.2.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
